--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -371,11 +371,9 @@ p.rtables-main-title {
     display: flex;
 }
 
-.carousel-control-next-icon {
-    background-image: url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E) !important;
-    background-color: #374259 !important;
-    height: 25px !important;
-    width: 25px !important;
+.carousel-control-next {
+    right: 0;
+    display: none;
 }
 
 .carousel-control-prev-icon {
