--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -400,13 +400,8 @@ p.rtables-main-title {
     display: flex;
 }
 
-.carousel-control-next {
-    right: 0;
-    display: none;
-}
-
-.carousel-control-prev-icon {
-    background-image: url(data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E);
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
     background-color: #374259 !important;
     height: 25px !important;
     width: 25px !important;
