--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -125,7 +125,7 @@ div.sidebar .shiny-input-container {
 
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     color: #526D82;
-    background-color: #D3E4CD;
+    background-color: #F3F4ED;
     margin-right: 5px !important;
     border: 2px solid #293B5F !important;
     font-weight: 400 !important;
