small ui changes

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -19,7 +19,7 @@
 
 #logo-id {
     width: 300px;
-    color: #fff;
+    color: #FFC26F;
     background-color: #526D82;
     font-size: x-large;
     padding-top: 6px;
