--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -52,6 +52,10 @@ b, strong {
     margin-bottom: 1rem;
 }
 
+#data_read_1-btn_prev {
+  color: #526D82 !important;
+}
+
 img {
     vertical-align: middle;
     border-style: none;
