--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -21,13 +21,14 @@
 
 #logo-id {
     width: 300px;
-    color: #fff;
-    background-color: #526D82;
+    color: #526D82;
+    background-color: #fff;
     font-size: large;
     font-family: math;
     padding-top: 6px;
     padding-bottom: 6px;
     padding-right: 24px;
+    border-bottom: 2px solid #526D82;
 }
 
 b, strong {
